--- a/tshilo_dikotla/templates/tshilo_dikotla/home.html
+++ b/tshilo_dikotla/templates/tshilo_dikotla/home.html
@@ -24,10 +24,10 @@
               <li><a id="link-infant" href="{% url 'section_url' 'infant' %}">Infant</a></li>
           </ul>
           </li>
-          <li><a id="pill-call-manager" href="#">Call Subjects
+          <li><a id="pill-call-manager" href="{% url 'admin:call_manager_call_changelist' %}">Call Subjects
                 <span class="glyphicon glyphicon-earphone pull-right" aria-hidden="true"></span>
           </a></li>
-          <li><a id="pill-potential-subjects" href="#">Potential Subjects
+          <li><a id="pill-potential-subjects" href="{% url 'admin:td_maternal_potentialsubject_changelist' %}">Potential Subjects
                 <span id="bdg-potential-subjects" class="badge pull-right"></span>
                 <span class="fa fa-user fa-2x pull-right" aria-hidden="true"></span>
           </a></li>
