automatically populating potential calls on appointment creation

--- a/tshilo_dikotla/templates/tshilo_dikotla/home.html
+++ b/tshilo_dikotla/templates/tshilo_dikotla/home.html
@@ -27,8 +27,8 @@
           <li><a id="pill-call-manager" href="{% url 'admin:call_manager_call_changelist' %}">Call Subjects
                 <span class="glyphicon glyphicon-earphone pull-right" aria-hidden="true"></span>
           </a></li>
-          <li><a id="pill-potential-subjects" href="{% url 'admin:td_maternal_potentialsubject_changelist' %}">Potential Subjects
-                <span id="bdg-potential-subjects" class="badge pull-right"></span>
+          <li><a id="pill-potential-subjects" href="{% url 'admin:td_maternal_potentialcall_changelist' %}">Potential Calls
+                <span id="bdg-potential-calls" class="badge pull-right"></span>
                 <span class="fa fa-user fa-2x pull-right" aria-hidden="true"></span>
           </a></li>
           <li><a id="link-verify-consent-subjects" href="#">Consent Verification
