added edc-label to app config

--- a/tshilo_dikotla/templates/tshilo_dikotla/home.html
+++ b/tshilo_dikotla/templates/tshilo_dikotla/home.html
@@ -32,7 +32,10 @@
           </a></li>
           <li role="presentation"><a id="link-pending-transactions" href="#">Manage transactions
           		<!--<span id="bdg-pending-transactions" class="badge pull-right"></span></a>-->
-          </li>
+          </a></li>
+          <li><a id="pill-labelling" href="{% url 'edc-label:home_url' %}">Labelling
+                <span class="glyphicon glyphicon-barcode pull-right" aria-hidden="true"></span>
+          </a></li>
        </ul>
     </div>
     <div id="div-home" class="col-md-4">
