--- a/td_dashboard/templates/td_dashboard/requisition_forms.html
+++ b/td_dashboard/templates/td_dashboard/requisition_forms.html
@@ -1,47 +1,3 @@
-<script type="text/javascript">
-<!--
-
-//-->
-$(document).ready(function() {
-	
-	$("#print-status-div").hide();
-	
-	$("#all-records-radio").click(function(){
-		 $('input[name=requisition-checkbox]').prop('checked', true);
-	});
-	
-	$("#btn-print-label").click(function(){
-		var selectedRecordsIds = $('input[name=requisition-checkbox]:checked').map(function(){
-			return this.value;
-		}).get();
-		
-		var url = "{% url 'subject_dashboard_url' subject_identifier %}";
-		var printStatus = $.ajax({
-			url: url,
-			type: 'GET',
-			dataType: 'json',
-			data: {
-				'requisitionids': selectedRecordsIds.toString(),
-			},
-		}).promise();
-
-		printStatus.done(function(){
-			$("#print-status-div").show();
-			$("#print-status-div").removeClass( "alert-danger" ).addClass( "alert-success" );
-			$("#print-status-div").text( "Printing is successful!" );
-		});
-
-		printStatus.fail(function(){
-			$("#print-status-div").show();
-			$("#print-status-div").removeClass( "alert-success" ).addClass( "alert-danger" );
-			$("#print-status-div").text( "Failed to print an error occurred!" );
-		});
-	});
-	
-});
-
-
-</script>
 <hr>
 <div id ="print-status-div-con"style=" margin-bottom: 1cm;"><span class="alert alert-danger" id="print-status-div">Failed to print an error occurred.</span></div>
 <h5>Scheduled Labs  for Visit {{visit_code}}</h5>
@@ -69,32 +25,32 @@ $(document).ready(function() {
 		</tr>
 	</thead>
 	<tbody>
-	{% for requisition in requisitions %}
+	{% for requisition_meta_data in requistions_metadata %}
     	<tr>
     		<small>
     		<td><label><input type="checkbox" name="requisition-checkbox" value="{{requisition.subject_requisition.pk}}"></label></td>
-    		<td><small>{{equisition.panel_name}}</small></td>
+    		<td><small>{{requisition_meta_data.panel_name}}</small></td>
     		<td>
-    			{% if requisition.subject_requisition %}
-    				<a href="{% url 'admin:amp_subjectrequisition_change' requisition.subject_requisition.pk %}?subject_visit={{requisition.subject_visit.id}}&appointment_id={{requisition.appointment.id}}&subject_identifier={{requisition.subject_identifier}}&next={% url 'subject_dashboard_url' requisition.subject_requisition.subject_visit.appointment.str_pk requisition.subject_requisition.subject_visit.subject_identifier %}&show=forms">Subject Requisition</a>
+    			{% if requisition_meta_data.subject_requisition %}
+    				<a href="{% url 'admin:amp_subjectrequisition_change' requisition_meta_data.subject_requisition.pk %}?subject_visit={{requisition_meta_data.subject_visit.pk}}&subject_identifier={{requisition_meta_data.appointment.subject_identifier}}&next={% url 'subject_dashboard_url' requisition_meta_data.appointment.str_pk requisition_meta_data.appointment.subject_identifier %}&show=forms">Subject Requisition</a>
     			{% else %}
-    				<a href="{% url 'admin:amp_subjectrequisition_add' %}?subject_visit={{requisition.subject_visit.id}}&appointment_id={{requisition.appointment.id}}&subject_identifier={{requisition.subject_identifier}}&next={% url 'subject_dashboard_url' requisition.subject_requisition.subject_visit.appointment.str_pk requisition.subject_requisition.subject_visit.subject_identifier %}&show=forms">Add Subject Requisition</a>
+    				<a href="{% url 'admin:amp_subjectrequisition_add' %}?subject_visit={{requisition_meta_data.subject_visit.pk}}&subject_identifier={{requisition_meta_data.appointment.subject_identifier}}&next={% url 'subject_dashboard_url' requisition_meta_data.appointment.str_pk requisition_meta_data.appointment.subject_identifier %}&show=forms">Add Subject Requisition</a>
     			{% endif %}
     		</td>
     		<td>
-    		{% if requisition.subject_requisition %}
-    			{{ requisition.subject_requisition.requisition_identifier }}
+    		{% if requisition_meta_data.subject_requisition %}
+    			{{ requisition_meta_data.subject_requisition.requisition_identifier }}
     		{% else %}
     			---
     		{% endif %}
     		</td>
-    		<td>{{requisition.entry_status}}</td>
-    		<td>{{requisition.due_datetime|date:"Y-m-d"|lower}}</td>
-    		<td>{{requisition.user_created}}</td>
-    		<td>{{requisition.created|date:"Y-m-d"|lower}}</td>
-    		<td>{{requisition.entry_comment}}</td>
-    		<td>{{requisition.entry_comment}}</td>                        
-			<td>{{requisition.visit_code}}</td>
+    		<td>{{requisition_meta_data.entry_status}}</td>
+    		<td>{{requisition_meta_data.due_datetime|date:"Y-m-d"|lower}}</td>
+    		<td>{{requisition_meta_data.user_created}}</td>
+    		<td>{{requisition_meta_data.created|date:"Y-m-d"|lower}}</td>
+    		<td>{{requisition_meta_data.entry_comment}}</td>
+    		<td>{{requisition_meta_data.entry_comment}}</td>                        
+			<td>{{requisition_meta_data.visit_code}}</td>
 			</smal>
     	</tr>
     {% endfor %}
