--- a/td_dashboard/templates/td_dashboard/subject_dashboard.html
+++ b/td_dashboard/templates/td_dashboard/subject_dashboard.html
@@ -62,6 +62,7 @@
 <!-- Begin 3-col-visits -->
 	<div class="col-md-3" style="min-height:200px; border:1px solid #eeeeee;">
 	{% block locator_information %}
+		{% include "amp_dashboard/locator.html" %}
 	{% endblock locator_information %}
 	</div>
 <!-- End 3-col-visits -->
