--- a/td_dashboard/templates/td_dashboard/scheduled_forms.html
+++ b/td_dashboard/templates/td_dashboard/scheduled_forms.html
@@ -1,7 +1,7 @@
 
 <h5>Scheduled Forms  for Visit '1000M'</h5>
 <i> Hint: To edit the forms below, change the selected appointment's status to 'In Progress'</i> 
-<table class="table table-bordered table-striped table-hover table-condensed">
+<table class="table table-bordered table-striped table-condensed">
 	<thead>
 		<tr>
 			<th>#</th>
@@ -12,15 +12,15 @@
 			<th>Created/Modified</th>                        
 			<th>Comment</th>        
 			<th>Browse</th>                        
-			<th>Audit</th>                
+			<!--<th>Audit</th>-->                
 		</tr>
 	</thead>
 	<tbody>
 		{% for crf in scheduled_forms %}
 			<tr>
-			    <td>{{forloop.counter}}</td>
+			    <td><span style="background:red; margin-right:20px">&nbsp;</span>{{forloop.counter}}</td>
 			    <td>
-			        {{crf.model}}
+			        <a href="{{crf.crf_model_add_or_update.1}}?next={% url 'subject_dashboard_url' crf.appointment.str_pk subject_identifier %}&show=forms">{{crf.crf_model_add_or_update.0}}</a>
 			    </td>                
 			    <td>
 			         {{crf.entry_status}}
@@ -28,13 +28,13 @@
 			    <td>{{crf.due_datetime|date:"Y-m-d D"| capfirst }}</td>
 			    <td>{{crf.user_created}}</td> 
 				<td>{{crf.user_modified |date:"Y-m-d D"| capfirst}}</td>            
-			    <td>{{crf.entry_comment}}</td>                  
+			    <td>{{crf.entry_comment| default:"" }}</td>                  
 			    <td>
 			        <a href="#">Browse</a>
 			    </td>
-			    <td>
+			    <!--<td>
 			      <a href="#">Audit trail visit</a>
-			    </td>
+			    </td> -->
 	  		</tr>
 	  	{% endfor %}
 	</tbody>
