search page, redirect

--- a/td_dashboard/templates/td_dashboard/maternal_dashboard.html
+++ b/td_dashboard/templates/td_dashboard/maternal_dashboard.html
@@ -17,7 +17,7 @@
         	<div class="panel-heading">Maternal</div>
         	<div class="panel-body">
         		{% crispy form %}
-        		<a href="{% url 'admin:td_maternal_maternaleligibility_add' %}" class="btn btn-sm btn-default" role="button">Add Maternal Eligibility</a>
+        		<a href="{% url 'admin:td_maternal_maternaleligibility_add' %}?next=maternal_url" class="btn btn-sm btn-default" role="button">Add Maternal Eligibility</a>
         	</div>
         	</div>
         </div>
