--- a/td_dashboard/templates/td_dashboard/locator.html
+++ b/td_dashboard/templates/td_dashboard/locator.html
@@ -4,7 +4,7 @@
 <p></p>
 <hr>
 <div class="panel-group">
-   	<div class="panel panel-default">
+   	<div class="panel panel-info">
    			<div class="panel-heading">Infant</div>
    			<div class="panel-body"></div>
  		</div>
@@ -50,7 +50,7 @@
 			</address>
    		</div>
  	</div>
- 	<div class="panel panel-default">
+ 	<div class="panel panel-info">
 		<div class="panel-heading">Action Items</div>
 		<div class="panel-body">
 		</div>
