--- a/td_dashboard/templates/td_dashboard/subject_dashboard.html
+++ b/td_dashboard/templates/td_dashboard/subject_dashboard.html
@@ -10,7 +10,7 @@
   <strong>{{dashboard_type | capfirst}} Dashboard</strong> 
   <hr style="margin-top:4px; margin-bottom:4px;">
   	<mark>
-		{% for key, value in markey_data %}
+		{% for key, value in marquee_data %}
 		    <strong style="margin-left:10px;">{{key}}:</strong><span style="margin-left:5px;">{{value.0}}  </span>
 		    {% if forloop.counter == markey_next_row %}
 		    	<br>
