--- a/tshilo_dikotla/templates/tshilo_dikotla/home.html
+++ b/tshilo_dikotla/templates/tshilo_dikotla/home.html
@@ -21,7 +21,7 @@
             <ul class="dropdown-menu">
               <li class="dropdown-header">Subjects</li>
               
-              <li><a id="link-maternal" href="{% url 'maternal_url' %}">Maternal</a></li>
+              <li><a id="link-maternal" href="{% url 'search_url' %}">Maternal</a></li>
               {% comment %}
               <li><a id="link-infant" href="{% url 'section_url' 'infant' %}">Infant</a></li> -->
               {% endcomment %}
