--- a/td_dashboard/templates/td_dashboard/requisition_forms.html
+++ b/td_dashboard/templates/td_dashboard/requisition_forms.html
@@ -24,11 +24,13 @@
     		<td><label><input type="checkbox" name="requisition-checkbox" value="{{requisition.subject_requisition.pk}}"></label></td>
     		<td><small>{{requisition_meta_data.panel_name}}</small></td>
     		<td>
+    			{% comment %}
     			{% if requisition_meta_data.subject_requisition %}
     				<a href="{% url 'admin:td_lab_maternalrequisition_change' requisition_meta_data.subject_requisition.pk %}?subject_visit={{requisition_meta_data.subject_visit.pk}}&subject_identifier={{requisition_meta_data.appointment.subject_identifier}}&next={% url 'subject_dashboard_url' requisition_meta_data.appointment.str_pk requisition_meta_data.appointment.subject_identifier %}&show=forms">Subject Requisition</a>
     			{% else %}
     				<a href="{% url 'admin:td_lab_maternalrequisition_add' %}?subject_visit={{requisition_meta_data.subject_visit.pk}}&subject_identifier={{requisition_meta_data.appointment.subject_identifier}}&next={% url 'subject_dashboard_url' requisition_meta_data.appointment.str_pk requisition_meta_data.appointment.subject_identifier %}&show=forms">Add Subject Requisition</a>
     			{% endif %}
+    			{% endcomment %}
     		</td>
     		<td>
     		{% if requisition_meta_data.subject_requisition %}
