--- a/td_dashboard/templates/td_dashboard/requisition_forms.html
+++ b/td_dashboard/templates/td_dashboard/requisition_forms.html
@@ -1,52 +1,44 @@
 <hr>
 <h5>Scheduled Labs  for Visit {{visit_code}}</h5>
 <i> Hint: To edit the labs below, change the selected appointment's status to 'In Progress'</i>
-<table class="table table-bordered table-striped table-hover table-condensed">
+<table class="table table-bordered table-striped table-condensed">
 	<thead>
 		<tr>
 			<th>#</th>
 			<th>Title</th>
 			<th>Requisition</th>
-			<th>Requisition identifier</th>
 			<th>Status</th>
 			<th>Due</th>
 			<th>User</th>
 			<th>Created/Modified</th>                        
 			<th>Comment</th>
-			<th>Browse</th>
-			<th>Audit</th>                
+			<th>Browse</th>             
 		</tr>
 	</thead>
 	<tbody>
-	{% for requisition_meta_data in requistions_metadata %}
+	{% for reqs in requistions_metadata %}
     	<tr>
-    		<small>
-    		<td><label><input type="checkbox" name="requisition-checkbox" value="{{requisition.subject_requisition.pk}}"></label></td>
-    		<td><small>{{requisition_meta_data.panel_name}}</small></td>
+    		<td>{% if reqs.entry_status == 'REQUIRED' %}<span style="background:red; margin-right:20px">&nbsp;</span>{% endif %} {{forloop.counter}}</td>
     		<td>
-    			{% comment %}
-    			{% if requisition_meta_data.subject_requisition %}
-    				<a href="{% url 'admin:td_lab_maternalrequisition_change' requisition_meta_data.subject_requisition.pk %}?subject_visit={{requisition_meta_data.subject_visit.pk}}&subject_identifier={{requisition_meta_data.appointment.subject_identifier}}&next={% url 'subject_dashboard_url' requisition_meta_data.appointment.str_pk requisition_meta_data.appointment.subject_identifier %}&show=forms">Subject Requisition</a>
-    			{% else %}
-    				<a href="{% url 'admin:td_lab_maternalrequisition_add' %}?subject_visit={{requisition_meta_data.subject_visit.pk}}&subject_identifier={{requisition_meta_data.appointment.subject_identifier}}&next={% url 'subject_dashboard_url' requisition_meta_data.appointment.str_pk requisition_meta_data.appointment.subject_identifier %}&show=forms">Add Subject Requisition</a>
-    			{% endif %}
-    			{% endcomment %}
+    			{% if reqs.entry_status == 'NOT_REQUIRED' %}
+			        	<span>{{reqs.reqs_model_add_or_update.0}}</span>
+			    {% else %}
+			        	<a href="{{reqs.reqs_model_add_or_update.1}}?next=subject_dashboard_url&appointment_pk={{reqs.appointment.str_pk}}&subject_identifier={{subject_identifier}}&visit_code={{visit_code}}&panel_name={{reqs.panel_name}}&show=forms">{{reqs.panel_name}}</a>
+			   	{% endif %}
     		</td>
     		<td>
-    		{% if requisition_meta_data.subject_requisition %}
-    			{{ requisition_meta_data.subject_requisition.requisition_identifier }}
+    		{% if reqs.subject_requisition %}
+    			{{ reqs.subject_requisition.requisition_identifier }}
     		{% else %}
     			---
     		{% endif %}
     		</td>
-    		<td>{{requisition_meta_data.entry_status}}</td>
-    		<td>{{requisition_meta_data.due_datetime|date:"Y-m-d"|lower}}</td>
-    		<td>{{requisition_meta_data.user_created}}</td>
-    		<td>{{requisition_meta_data.created|date:"Y-m-d"|lower}}</td>
-    		<td>{{requisition_meta_data.entry_comment}}</td>
-    		<td>{{requisition_meta_data.entry_comment}}</td>                        
-			<td>{{requisition_meta_data.visit_code}}</td>
-			</smal>
+    		<td>{{reqs.entry_status}}</td>
+    		<td>{{reqs.due_datetime|date:"Y-m-d  D"|capfirst}}</td>
+    		<td>{{reqs.user_created}}</td>
+    		<td>{{reqs.created|date:"Y-m-d  D"|capfirst}}</td>
+    		<td>{{reqs.entry_comment}}</td>
+    		<td>{{reqs.entry_comment}}</td>                        
     	</tr>
     {% endfor %}
 	</tbody>
